--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-* {
-    outline: 1px solid green;
-}
-
 body {
     font-family: "Bangers", cursive;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 @tailwind base;
